Add custom datasources
Make custom datasources use local filesystem or hdfs depending on cluster
